fix overflow

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,6 +6,7 @@
 
 body {
     font-family: 'montserrat', sans-serif;
+    overflow: hidden;
 }
 
 .popupContainer {
